[package]
name = "raft"
version = "0.1.0"
edition = "2024"

[lib]
name = "raft"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "raft"
path = "src/main.rs"

[dependencies]
rand = "0.9.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
